added player switch and started on counter

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "main": "/index.js",
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "react-scripts": "1.0.0"
   },
   "name": "wjwuw8",
@@ -15,6 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "homepage": "https://CaptainCronch.github.io/react-tic-tac-toe"
 }
